<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <Button
            android:text="@string/change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnChange"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="8dp"/>
    <TextView
            android:text="@string/java"
            android:textSize="25sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="32dp" app:layout_constraintEnd_toStartOf="@+id/editTextJava"
            android:layout_marginRight="32dp" app:layout_constraintHorizontal_bias="1.0"
            android:layout_marginTop="40dp"/>
    <TextView
            android:text="@string/network"
            android:textSize="25sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toStartOf="@+id/editTextNetwork" android:layout_marginRight="32dp"
            app:layout_constraintHorizontal_bias="1.0"/>
    <TextView
            android:text="@string/database"
            android:textSize="25sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginEnd="32dp" app:layout_constraintEnd_toStartOf="@+id/editTextDB"
            android:layout_marginRight="32dp" app:layout_constraintHorizontal_bias="1.0"/>
    <TextView
            android:text="@string/total"
            android:textSize="25sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            android:layout_marginTop="72dp"
            app:layout_constraintTop_toBottomOf="@+id/btnSubmit" android:layout_marginEnd="60dp"
            app:layout_constraintEnd_toStartOf="@+id/editTextTotal" android:layout_marginRight="60dp"
            app:layout_constraintHorizontal_bias="1.0"/>
    <TextView
            android:text="@string/ave"
            android:textSize="25sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/textView4"
            android:layout_marginEnd="60dp" app:layout_constraintEnd_toStartOf="@+id/editTextAve"
            android:layout_marginRight="60dp" app:layout_constraintHorizontal_bias="1.0"/>
    <TextView
            android:text="@string/grade"
            android:textSize="25sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView6"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.0" android:layout_marginEnd="60dp"
            app:layout_constraintEnd_toStartOf="@+id/editTextGrade" android:layout_marginRight="60dp"
            app:layout_constraintHorizontal_bias="1.0"/>
    <Button
            android:text="@string/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnSubmit"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3" app:layout_constraintHorizontal_bias="0.501"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editTextJava"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp" android:layout_marginRight="32dp"
            app:layout_constraintTop_toTopOf="@+id/textView" app:layout_constraintBottom_toBottomOf="@+id/textView"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editTextNetwork" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            app:layout_constraintTop_toTopOf="@+id/textView2" app:layout_constraintBottom_toBottomOf="@+id/textView2"
    />
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editTextDB" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp" android:layout_marginRight="32dp"
            app:layout_constraintTop_toTopOf="@+id/textView3" app:layout_constraintBottom_toBottomOf="@+id/textView3"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:ems="10"
            android:id="@+id/editTextTotal" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            app:layout_constraintTop_toTopOf="@+id/textView4" app:layout_constraintBottom_toBottomOf="@+id/textView4"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:id="@+id/editTextAve"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp" android:layout_marginRight="32dp"
            app:layout_constraintTop_toTopOf="@+id/textView5" app:layout_constraintBottom_toBottomOf="@+id/textView5"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:id="@+id/editTextGrade" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            app:layout_constraintTop_toTopOf="@+id/textView6" app:layout_constraintBottom_toBottomOf="@+id/textView6"/>
</android.support.constraint.ConstraintLayout>