<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activity2">
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:id="@+id/linearLayout6"
            android:weightSum="10"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout5"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.0">
        <TextView
                android:text="@string/grade"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/grade"
                android:textSize="25sp" android:layout_weight="3.5"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:ems="10"
                android:id="@+id/editTextGrade2" android:layout_weight="6"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="60dp" android:layout_marginTop="30dp"
            android:weightSum="10"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:id="@+id/linearLayout1" app:layout_constraintHorizontal_bias="0.0">
        <TextView
                android:text="@string/java"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/java_score"
                android:textSize="25sp" android:layout_weight="3.5"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/editTextJava2" android:layout_weight="6"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:weightSum="10"
            android:gravity="center"
            android:id="@+id/linearLayout2"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout1" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.0">
        <TextView
                android:text="@string/network"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/network_score"
                android:textSize="25sp" android:layout_weight="3.5"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/editTextNetwork2" android:layout_weight="6"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:weightSum="10"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:id="@+id/linearLayout3"
            app:layout_constraintHorizontal_bias="0.0">
        <TextView
                android:text="@string/database"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/db_score"
                android:textSize="25sp" android:layout_weight="3.5"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/editTextDB2" android:layout_weight="6"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:id="@+id/linearLayout4"
            android:weightSum="10"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="40dp" app:layout_constraintTop_toBottomOf="@+id/btnSubmit2">

        <TextView
                android:text="@string/total"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/total"
                android:textSize="25sp" android:layout_weight="3.5"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:ems="10"
                android:id="@+id/editTextTotal2" android:layout_weight="6"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:id="@+id/linearLayout5"
            android:weightSum="10"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
    >

        <TextView
                android:text="@string/ave"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/ave"
                android:textSize="25sp" android:layout_weight="3.5"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:ems="10"
                android:id="@+id/editTextAve2" android:layout_weight="6"/>
    </LinearLayout>
    <Button
            android:text="@string/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/btnSubmit2"
            app:layout_constraintHorizontal_bias="0.498"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/linearLayout3"/>
    <Button
            android:text="@string/change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginRight="8dp" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/btnChange2"
            android:layout_marginBottom="8dp"
    />
</android.support.constraint.ConstraintLayout>